[package]
name = "fletch-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "6502-eater-none-javac"
path = "src/main.rs"

[dependencies]
cfgrammar = "0.13"
fletch-ast = { path = "../ast" }
getopts = "0.2"
lrlex = "0.13"
lrpar = "0.13"
regex = "1"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
fletch-ast = { path = "../ast" }
